Replace client-react with client-web directory references

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aspnet.core.react.template",
+  "name": "aspnet.core.vuejs.template",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,15 +7,15 @@
     "postinstall": "dotnet restore ./api && dotnet restore ./api.test",
     "build": "dotnet build ./api",
     "test:api": "cd ./api.test && dotnet xunit",
-    "pretest:client": "./node_modules/typescript/bin/tsc -p ./client-react.test/",
-    "test:client": "mocha --require ignore-styles --recursive client-react.test/build/client-react.test",
+    "pretest:client": "./node_modules/typescript/bin/tsc -p ./client-web.test/",
+    "test:client": "mocha --require ignore-styles --recursive client-web.test/build/client-web.test",
     "test": "npm run test:api && npm run test:client",
     "migrate": "cd ./api/ && dotnet ef migrations add $(date +%s) && dotnet ef database update",
     "prestart": "docker-compose up -d",
     "start": "cd ./api && cross-env NODE_PATH=../node_modules/ ASPNETCORE_ENVIRONMENT=Development dotnet watch run",
     "start:release": "npm run prerelease && cd ./api/bin/Release/netcoreapp1.0/publish/ && dotnet api.dll",
     "provision:prod": "ansible-playbook -l production -i ./ops/hosts ./ops/provision.yml",
-    "prerelease": "cross-env ASPNETCORE_ENVIRONMENT=Production webpack --config ./client-react/webpack.config.js && cd ./api && dotnet publish --configuration Release",
+    "prerelease": "cross-env ASPNETCORE_ENVIRONMENT=Production webpack --config ./client-web/webpack.config.js && cd ./api && dotnet publish --configuration Release",
     "deploy:prod": "npm run prerelease && ansible-playbook -l production -i ./ops/hosts ./ops/deploy.yml",
     "ssh:prod": "ssh `grep 'deploy_user=' ./ops/hosts | tail -n1 | awk -F'=' '{ print $2}'`@`awk 'f{print;f=0} /[production]/{f=1}' ./ops/hosts | head -n 1`"
   },
